--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -12,3 +12,10 @@
   padding: 0;
   margin: 0;
 }
+
+@media screen and (max-width: 620px) {
+  .cards__list {
+    display: grid;
+    grid-gap: 10px;
+  }
+}
