--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -12,9 +12,6 @@
   grid-template-columns: minmax(auto, 373px) auto;
   grid-gap: 10px;
   padding: 0 0 0 24px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
 }
 
 .profile__title {
@@ -24,6 +21,9 @@
   margin: 0;
   grid-area: title;
   font-family: "Inter", Arial, sans-serif;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__edit-button {
@@ -37,7 +37,7 @@
 }
 
 .profile__edit-button:hover {
-  opacity: 0.5;
+  opacity: 0.6;
   cursor: pointer;
 }
 
@@ -64,6 +64,9 @@
   font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__image {
@@ -75,14 +78,16 @@
   margin: 25px 0;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 620px) {
   .profile {
+    display: flex;
     flex-direction: column;
+    align-items: center;
   }
 
   .profile__image {
-    width: 100px;
-    height: 100px;
+    width: 120px;
+    height: 120px;
   }
 
   .profile__info {
@@ -91,7 +96,6 @@
 
   .profile__description {
     width: 100%;
-    font-family: "Inter", Arial, sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 17px;
@@ -99,7 +103,9 @@
   }
 
   .profile__title {
-    font-family: "Inter", Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    gap: 2px;
     font-size: 22px;
     font-weight: 500;
     line-height: 26.63px;
@@ -107,11 +113,17 @@
   }
 
   .profile__add-button {
-    margin: 0;
     width: 100%;
-    padding: 0 20px 20px;
+    margin: 0 20px 10px;
   }
   .profile__edit-button {
-    margin-right: 20px;
+    width: 18px;
+    height: 18px;
+    margin: 0;
+    padding: 0;
+  }
+  .logo__title {
+    width: 126px;
+    height: 24px;
   }
 }
